and fix overflow when beyond max width

--- a/dev/scss/_main.scss
+++ b/dev/scss/_main.scss
@@ -356,7 +356,6 @@ footer {
 
 .stripe.instagram-stripe {
   white-space: nowrap;
-  max-width: 100%;
   overflow-x: hidden;
 }
 
